--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,7 +6,7 @@
 # Appearance
 
 theme: Dark
-day_night: true
+day_night: false
 font: ''
 font_size: M
 
@@ -22,8 +22,8 @@ twitter: ''
 
 email: patrickcannon@improbable.io
 # phone: 888 888 88 88
-address:
-  street: London, UK
+# address:
+#   street: London, UK
   # city: London
   # region: CA
   # postcode: '94305'
